--- a/webapp/core/view/layout.html
+++ b/webapp/core/view/layout.html
@@ -16,7 +16,7 @@
 				<header class="container">
 				    <div class="row">
 				        <div class="col-sm-5">
-				            <a href="/"><img class="logo" src="/core/view/images/logo.png"></a>
+				            <a href="/"><img class="logo" src="/core/view/images/logo.png" alt="SmartResolution Home" /></a>
 				        </div>
 
 				        <div class="col-sm-7 text-right">
